--- a/appendix_alumina.tex
+++ b/appendix_alumina.tex
@@ -1,7 +1,12 @@
 \chapter{Aluminiumoxid}
 \label{appendix_alumina}
 
-\todo[inline]{Precursor}
+\section{Simulationen von Trimethylaluminium}
+
 \todo[inline]{TMA-Simulationen}
+
+\section{Wasser-\ce{Al2O3}-Reaktionen}
+
 \todo[inline]{Bedeckungszahlen}
 \todo[inline]{Ergebnis von 02\_water\_surface}
+
