--- a/contents.tex
+++ b/contents.tex
@@ -57,42 +57,40 @@
 %\end{acronym}
 
 \def\arraystretch{1.3}
-\begin{longtable}{lll}
-
-AFM       & Atomic Force Microscopy             & Rasterkraftmikroskopie                                      \\
-ALD       & Atomic Layer Deposition             & Atomlagenabscheidung                                        \\
-CG        & Conjugated Gradients                & Konjugierte Gradienten                                      \\
-CLI       & Command Line Interface              & Kommandozeile                                               \\
-CFD       & Computational Fluid Dynamics        & Eine Methode zur Gasfluss/Simulation                        \\
-CVD       & Chemical Vapor Deposition           & Chemische Gasphasenabscheidung                              \\
-DFT       & Density Functional Theory           & Dichtefunktionaltheorie                                     \\
-EAM       & Embedded Atom Method                & Eingebettete-Atom-Methode                                   \\
-FEM       & Finite Element Method               & Finite-Elemente-Methoden                                    \\
-GPC       & Growth per Cycle                    & Schichtwachstum pro ALD-Zyklus                              \\
-KMC       & Kinetic Monte Carlo                 & Kinetische Monte Carlo-Methoden                             \\
-MMC       & Metropolis Monte Carlo              & Metropolis Monte Carlo-Methoden                             \\
-MD        & Molecular Dynamics                  & Molekulardynamik                                            \\
-MEAM      & Modified Embedded Atom Method       & Modifizierte Eingebettete-Atom-Methode                      \\
-MOSFET    & Metal Oxide Field Effect Transistor & Metalloxid-Feldeffekt-Transistor                            \\
-MPI       & Message Passing Interface           & Eine Kommunikationsschnittstelle                            \\
-NB        & Neighborhood                        & (atomare) Nachbarschaft                                     \\
-PVD       & Physical Vapor Deposition           & Physikalische Gasphasenabscheidung                          \\
-RAM       & Random-Access Memory                & Arbeitsspeicher                                             \\
-RDF       & Radial Distribution Function        & Radiale Verteilungsfunktion                                 \\
-RMS       & Root Mean Square                    & Standardabweichung                                          \\
-ReaxFF    & Reactive Force Fields               & Reaktive Kraftfelder                                        \\
-TMA       & Trimethylaluminum (\ce{Al(CH3)3})   & Trimethylaluminium (\ce{Al(CH3)3})                          \\
-NPT       & \multicolumn{2}{l}{Großkanonisches Ensemble: Teilchenzahl, Druck und Temperatur sind konstant}    \\
-NVE       & \multicolumn{2}{l}{Mikrokanonisches Ensemble: Teilchenzahl, Volumen und Energie sind konstant}    \\
-NVT       & \multicolumn{2}{l}{Kanonisches Ensemble: Teilchenzahl, Volumen und Temperatur sind konstant}      \\
-Parsivald & \multicolumn{2}{l}{Parallel Atomistic Reaction Simulator for Vapor and Atomic Layer Depositions}  \\
-
-\end{longtable}
+\begin{tabular}{lll}
+AFM       & Atomic Force Microscopy             & Rasterkraftmikroskopie                                     \\
+ALD       & Atomic Layer Deposition             & Atomlagenabscheidung                                       \\
+CG        & Conjugated Gradients                & Konjugierte Gradienten                                     \\
+CFD       & Computational Fluid Dynamics        & Eine Methode zur Gasfluss/Simulation                       \\
+CVD       & Chemical Vapor Deposition           & Chemische Gasphasenabscheidung                             \\
+DFT       & Density Functional Theory           & Dichtefunktionaltheorie                                    \\
+EAM       & Embedded Atom Method                & Eingebettete-Atom-Methode                                  \\
+GPC       & Growth per Cycle                    & Schichtwachstum pro ALD-Zyklus                             \\
+KMC       & Kinetic Monte Carlo                 & Kinetische Monte Carlo-Methoden                            \\
+MMC       & Metropolis Monte Carlo              & Metropolis Monte Carlo-Methoden                            \\
+MD        & Molecular Dynamics                  & Molekulardynamik                                           \\
+MEAM      & Modified Embedded Atom Method       & Modifizierte Eingebettete-Atom-Methode                     \\
+MOSFET    & Metal Oxide Field Effect Transistor & Metalloxid-Feldeffekt-Transistor                           \\
+MPI       & Message Passing Interface           & Eine Kommunikationsschnittstelle                           \\
+PVD       & Physical Vapor Deposition           & Physikalische Gasphasenabscheidung                         \\
+RAM       & Random-Access Memory                & Arbeitsspeicher                                            \\
+RDF       & Radial Distribution Function        & Radiale Verteilungsfunktion                                \\
+RMS       & Root Mean Square                    & Standardabweichung                                         \\
+ReaxFF    & Reactive Force Fields               & Reaktive Kraftfelder                                       \\
+TMA       & Trimethylaluminum (\ce{Al(CH3)3})   & Trimethylaluminium (\ce{Al(CH3)3})                         \\
+NPT       & \multicolumn{2}{l}{Großkanonisches Ensemble: Teilchenzahl, Druck und Temperatur sind konstant}   \\
+NVE       & \multicolumn{2}{l}{Mikrokanonisches Ensemble: Teilchenzahl, Volumen und Energie sind konstant}   \\
+NVT       & \multicolumn{2}{l}{Kanonisches Ensemble: Teilchenzahl, Volumen und Temperatur sind konstant}     \\
+Parsivald & \multicolumn{2}{l}{Parallel Atomistic Reaction Simulator for Vapor and Atomic Layer Depositions} \\
+\end{tabular}
 
 \begin{comment}
   Liste der Abkürzungen, die nicht weiter erklärt werden:
   (Comment-Umgebung, damit sie vom Parser trotzdem erfasst werden)
 
+NB        & Neighborhood                        & (atomare) Nachbarschaft                                     \\
+CLI       & Command Line Interface              & Kommandozeile                                               \\
+FEM       & Finite Element Method               & Finite-Elemente-Methoden                                    \\
   ENAS      & \multicolumn{2}{l}{Fraunhofer-Institut für Elektronische Nano-Systeme}                            \\
   LAMMPS    & \multicolumn{2}{l}{Large-scale Atomic/Molecular Massively Parallel Simulator (MD-Bibliothek)}     \\
   LMP
@@ -113,9 +111,6 @@ Parsivald & \multicolumn{2}{l}{Parallel Atomistic Reaction Simulator for Vapor a
   MOSFETs
 \end{comment}
 
-\todo[inline]{NB vorstellen?}
-\todo[inline]{MMC: schönerer Name?}
-\todo[inline]{Beschreibung der Ensembles hier oder nur im Text?}
 \todo[inline]{Prüfen, ob die Abkürzungen im Text ordentlich eingeführt werden}
 
 \chapter*{Symbolverzeichnis}
@@ -123,13 +118,41 @@ Parsivald & \multicolumn{2}{l}{Parallel Atomistic Reaction Simulator for Vapor a
 \markboth{Abkürzungsverzeichnis}{Symbolverzeichnis}
 \def\listacronymname{Symbolverzeichnis}
 
-\begin{tabularx}{\linewidth}{ll}
-$E_\text{A}$       & Aktivierungsenergie            \\
-$p_\text{partial}$ & Partialdruck                   \\
-$\sigma_z$         & RMS-Rauheit einer Oberfläche   \\
-$\tau$             & Dämpfungszeit von Thermostaten \\
-\end{tabularx}
-\todo[inline]{die wichtigsten Symbole automatisch aus allen Formeln exportieren}
+\begin{tabular}{ll}
+$\alpha$         & Parameter der Alpha-Form / Schrittweite bei MD-Minimierungen \\
+$\Delta t$       & Zeitschrittweite                                             \\
+$E$              & Energie                                                      \\
+$E_i$            & Ein KMC-Ereignis                                             \\
+$F_\alpha$       & Einbettungsfunktion des EAM-Potentiales                      \\
+$\kappa$         & Dielektrizitätskonstante eines Materiales                    \\
+$k_B$            & Boltzmann-Konstante                                          \\
+$m$              & Masse eines Teilchens                                        \\
+$M$              & Virtuelle Masse eines Thermostates                           \\
+$n_\text{cyc.}$  & Zahl der simulierten KMC-Zyklen                              \\
+$r_\text{bond}$  & Bindungslänge                                                \\
+$r_c$            & Cutoff-Radius eines Kraftfeldes                              \\
+$r_d$            & Umkugel-Radius eines Delaunay-Simplexes                      \\
+$r_s$            & Suchradius                                                   \\
+$r_{ij}$         & Radialer Abstand zwischen Teilchen $i$ und $j$               \\
+$r_i$            & Rate des Ereignisses $E_i$                                   \\
+$R_i$            & Akkumulierte Rate des Ereignisses $E_i$                      \\
+$R_N$            & Summe der Raten aller möglichen Ereignisse                   \\
+$\sigma_z$       & RMS-Rauheit einer Oberfläche                                 \\
+$\tau$           & Dämpfungszeit von Thermostaten                               \\
+$t_\text{relax}$ & Relaxationszeit einer MD-Simulation                          \\
+$u$,~$u'$        & $[0,1)$-gleichverteilte Zufallszahlen                        \\
+$\vec F(X)$      & Kraft auf ein Teilchen                                       \\
+$\vec p$         & Impulsvektor                                                 \\
+$\vec v$         & Geschwindigkeitsvektor                                       \\
+$V(X)$           & Potentielle Energie eines Teilchens                          \\
+$X$              & Zustand eines Systemes                                       \\
+$\mathbb{X}$     & Zustandsraum eines Systems                                   \\
+%% $d$              & Anzahl der Dimensionen                                       \\
+%% $T$              & Temperatur                                                   \\
+%% $V$              & Volumen                                                      \\
+%% $p$              & Druck                                                        \\
+%% $\nabla$         & Nabla-Operator                                               \\
+\end{tabular}
 
 %\printglosstex(acr)
 
